--- a/about.html
+++ b/about.html
@@ -2,12 +2,71 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About Me</title>
+    <title>About | Sarvesh Saraf</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>About Me</h1>
-    <p>I am an Electronics & Telecommunication Engineer passionate about Cloud Computing, AWS, and Software Development.</p>
-    <a href="index.html">⬅ Back to Home</a>
+    <header class="sub-header">
+        <div class="container">
+            <h1>About Me</h1>
+            <p><a href="index.html" class="link-inline">⬅ Back to Home</a></p>
+        </div>
+    </header>
+
+    <main class="section">
+        <div class="container">
+            <div class="card">
+                <h2>Who I Am</h2>
+                <p>
+                    I’m Sarvesh Saraf, a Full Stack Developer and aspiring DevOps Engineer with a background in
+                    Electronics & Communication Engineering. I enjoy building end-to-end solutions — from backend
+                    APIs and databases to frontends and cloud deployments.
+                </p>
+                <p>
+                    My interests span web development, IoT, cloud infrastructure and automation. I like working on
+                    systems that are reliable, scalable and easy to maintain.
+                </p>
+            </div>
+
+            <div class="grid-2">
+                <div class="card">
+                    <h2>Technical Stack</h2>
+                    <ul>
+                        <li><strong>Languages:</strong> Java, Python, JavaScript, SQL</li>
+                        <li><strong>Web:</strong> HTML, CSS, Node.js, Express</li>
+                        <li><strong>Databases:</strong> MySQL, SQLite, MongoDB</li>
+                        <li><strong>ML & Vision:</strong> TensorFlow, OpenCV</li>
+                        <li><strong>Cloud & DevOps:</strong> AWS (Beginner), Docker (Learning), Git, GitHub</li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <h2>Soft Skills</h2>
+                    <ul>
+                        <li>Problem Solving & Debugging</li>
+                        <li>Collaboration & Communication</li>
+                        <li>Presentation & Mentoring</li>
+                        <li>Event Management & Leadership</li>
+                        <li>Fast Learner, Curious Mindset</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="card">
+                <h2>What I’m Focusing on Now</h2>
+                <ul>
+                    <li>Improving full stack skills with Java and Node.js.</li>
+                    <li>Learning Docker, CI/CD pipelines and cloud deployment workflows.</li>
+                    <li>Working on projects that combine IoT, cloud and automation.</li>
+                </ul>
+            </div>
+        </div>
+    </main>
+
+    <footer class="site-footer">
+        <div class="container footer-content">
+            <p>© 2025 Sarvesh Saraf.</p>
+        </div>
+    </footer>
 </body>
 </html>
