Enhance contact page with additional details

--- a/contact.html
+++ b/contact.html
@@ -2,13 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contact</title>
+    <title>Contact | Sarvesh Saraf</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Contact Me</h1>
-    <p>Email: yourname@gmail.com</p>
-    <p>LinkedIn: linkedin.com/in/yourname</p>
-    <a href="index.html">⬅ Back to Home</a>
+    <header class="sub-header">
+        <div class="container">
+            <h1>Contact</h1>
+            <p><a href="index.html" class="link-inline">⬅ Back to Home</a></p>
+        </div>
+    </header>
+
+    <main class="section">
+        <div class="container">
+            <div class="card">
+                <h2>Get in Touch</h2>
+                <p>
+                    If you’d like to discuss an opportunity, collaborate on a project, or just talk tech, feel free to
+                    reach out using the details below.
+                </p>
+                <ul class="contact-list">
+                    <li><strong>Email:</strong> <a href="mailto:your.email@example.com">your.email@example.com</a></li>
+                    <li><strong>Phone:</strong> +91-XXXXXXXXXX</li>
+                    <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/your-linkedin" target="_blank">linkedin.com/in/your-linkedin</a></li>
+                    <li><strong>GitHub:</strong> <a href="https://github.com/your-github" target="_blank">github.com/your-github</a></li>
+                    <li><strong>LeetCode:</strong> <a href="https://leetcode.com/your-handle" target="_blank">leetcode.com/your-handle</a></li>
+                </ul>
+            </div>
+        </div>
+    </main>
+
+    <footer class="site-footer">
+        <div class="container footer-content">
+            <p>© 2025 Sarvesh Saraf.</p>
+        </div>
+    </footer>
 </body>
 </html>
