Update portfolio content with latest resume details

--- a/about.html
+++ b/about.html
@@ -20,12 +20,12 @@
                 <h2>Who I Am</h2>
                 <p>
                     I’m Sarvesh Saraf, a Full Stack Developer and aspiring DevOps Engineer with a background in
-                    Electronics & Communication Engineering. I enjoy building end-to-end solutions — from backend
-                    APIs and databases to frontends and cloud deployments.
+                    Electronics & Communication Engineering. I enjoy building scalable, reliable web applications and
+                    automating deployment workflows.
                 </p>
                 <p>
-                    My interests span web development, IoT, cloud infrastructure and automation. I like working on
-                    systems that are reliable, scalable and easy to maintain.
+                    My experience includes working with Python, SQL and IoT/ML projects, and I’m actively learning
+                    Java, Docker, CI/CD and cloud deployment to grow in DevOps-oriented roles.
                 </p>
             </div>
 
@@ -33,11 +33,12 @@
                 <div class="card">
                     <h2>Technical Stack</h2>
                     <ul>
-                        <li><strong>Languages:</strong> Java, Python, JavaScript, SQL</li>
-                        <li><strong>Web:</strong> HTML, CSS, Node.js, Express</li>
+                        <li><strong>Languages:</strong> Java, Python, SQL, JavaScript</li>
+                        <li><strong>Web:</strong> HTML, CSS (Learning)</li>
+                        <li><strong>Frameworks & Libraries:</strong> Django (Learning), OpenCV, TensorFlow</li>
                         <li><strong>Databases:</strong> MySQL, SQLite, MongoDB</li>
-                        <li><strong>ML & Vision:</strong> TensorFlow, OpenCV</li>
-                        <li><strong>Cloud & DevOps:</strong> AWS (Beginner), Docker (Learning), Git, GitHub</li>
+                        <li><strong>Cloud & DevOps:</strong> AWS (Beginner), Docker (Learning)</li>
+                        <li><strong>Version Control:</strong> Git, GitHub</li>
                     </ul>
                 </div>
                 <div class="card">
@@ -45,19 +46,20 @@
                     <ul>
                         <li>Problem Solving & Debugging</li>
                         <li>Collaboration & Communication</li>
-                        <li>Presentation & Mentoring</li>
-                        <li>Event Management & Leadership</li>
-                        <li>Fast Learner, Curious Mindset</li>
+                        <li>Multilingual & Presentation Skills</li>
+                        <li>Leadership (Cultural Secretary, event management)</li>
+                        <li>Fast Learner with a growth mindset</li>
                     </ul>
                 </div>
             </div>
 
             <div class="card">
-                <h2>What I’m Focusing on Now</h2>
+                <h2>What I’m Focusing On</h2>
                 <ul>
-                    <li>Improving full stack skills with Java and Node.js.</li>
-                    <li>Learning Docker, CI/CD pipelines and cloud deployment workflows.</li>
-                    <li>Working on projects that combine IoT, cloud and automation.</li>
+                    <li>Improving full stack skills with JavaScript, Node.js and modern web development.</li>
+                    <li>Practicing DSA and system design fundamentals.</li>
+                    <li>Learning Docker, CI/CD pipelines and AWS deployment workflows.</li>
+                    <li>Exploring projects that combine IoT, machine learning and cloud automation.</li>
                 </ul>
             </div>
         </div>
