--- a/index.html
+++ b/index.html
@@ -2,29 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sarvesh Saraf | Full Stack & DevOps Enthusiast</title>
+    <title>Sarvesh Saraf | Full Stack Developer & Aspiring DevOps Engineer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio of Sarvesh Saraf - Full Stack Developer and Aspiring DevOps Engineer.">
+    <meta name="description" content="Portfolio of Sarvesh Saraf - Full Stack Developer and Aspiring DevOps Engineer with experience in Python, SQL, IoT and ML projects.">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="site-header">
         <div class="container header-content">
             <div class="profile-block">
-                <img src="sarvesh.jpg" alt="Photo of Sarvesh Saraf" class="profile-photo">
+                <img src="profile.jpg" alt="Photo of Sarvesh Saraf" class="profile-photo">
             </div>
             <div class="intro-block">
                 <h1 class="name">Sarvesh Saraf</h1>
                 <p class="role">Full Stack Developer | Aspiring DevOps Engineer</p>
                 <p class="summary">
-                    Passionate about building scalable web applications, automating deployments, and working with
-                    modern cloud and DevOps tools. Experience with Python, JavaScript, SQL, IoT and ML projects,
-                    while actively learning Docker, CI/CD and AWS to grow into DevOps-focused roles.
+                    Passionate about building scalable web apps and automating deployments. Experience in Python, SQL,
+                    and IoT/ML projects. Currently learning Java, Docker, CI/CD and cloud deployment to transition into
+                    DevOps-focused roles.
                 </p>
                 <div class="contact-links">
-                    <a href="mailto:your.email@example.com" class="btn-primary">Email</a>
+                    <a href="mailto:Sarafsarv6699@gmail.com" class="btn-primary">Email</a>
                     <a href="https://www.linkedin.com/in/your-linkedin" target="_blank" class="btn-secondary">LinkedIn</a>
                     <a href="https://github.com/your-github" target="_blank" class="btn-secondary">GitHub</a>
+                    <a href="https://leetcode.com/your-leetcode" target="_blank" class="btn-secondary">LeetCode</a>
                 </div>
             </div>
         </div>
@@ -40,19 +41,28 @@
                         <h3>Programming & Web</h3>
                         <ul>
                             <li>Java, Python, SQL, JavaScript</li>
-                            <li>HTML, CSS</li>
-                            <li>Node.js, Express (for projects)</li>
+                            <li>HTML, CSS (Learning)</li>
                         </ul>
                     </div>
                     <div class="card">
-                        <h3>Frameworks & Tools</h3>
+                        <h3>Frameworks, Libraries & Tools</h3>
                         <ul>
-                            <li>TensorFlow, OpenCV</li>
+                            <li>Django (Learning), OpenCV, TensorFlow</li>
                             <li>MySQL, SQLite, MongoDB</li>
                             <li>Git, GitHub</li>
                             <li>AWS (Beginner), Docker (Learning)</li>
                         </ul>
                     </div>
+                </div>
+
+                <div class="card">
+                    <h3>Core Subjects</h3>
+                    <ul>
+                        <li>Data Structures & Algorithms</li>
+                        <li>Operating Systems</li>
+                        <li>Networking</li>
+                        <li>Deep Learning</li>
+                    </ul>
                 </div>
             </div>
         </section>
@@ -63,14 +73,15 @@
                 <h2>Experience</h2>
                 <div class="card">
                     <h3>Nutshell Infosoft Pvt Ltd – IoT Developer Intern</h3>
-                    <p class="meta">Oct 2023 – Jan 2024 · Nashik, India</p>
+                    <p class="meta">Oct 2023 – Jan 2024 · Nashik, India · Python, Raspberry Pi 4B+, IoT Protocols, MySQL</p>
                     <ul>
                         <li>
-                            Developed a real-time bottle collection monitoring system using image recognition with
-                            TensorFlow, OpenCV and IoT sensors to improve detection accuracy and operational efficiency.
+                            Developed a real-time bottle collection monitoring system using image recognition,
+                            integrating TensorFlow, OpenCV and IoT sensors to enhance detection accuracy and
+                            operational efficiency.
                         </li>
                         <li>
-                            Collaborated with cross-functional teams to build and deliver a working prototype within
+                            Collaborated with cross-functional teams to deliver a fully functional prototype within
                             strict deadlines.
                         </li>
                     </ul>
@@ -88,44 +99,47 @@
                     <p class="meta">Python, TensorFlow, YOLOv8, OpenCV, SVM, CNN, Raspberry Pi</p>
                     <ul>
                         <li>
-                            Built a tongue-based biometric authentication system with real-time image processing and
-                            feature matching on Raspberry Pi in a resource-constrained environment.
+                            Built a tongue-based biometric authentication system with real-time image processing using
+                            YOLOv8, OpenCV and SVM on Raspberry Pi.
                         </li>
                         <li>
-                            Implemented dual-factor authentication by combining PIN entry with tongue biometrics for
-                            enhanced security.
+                            Developed reliable feature matching in a resource-constrained environment and implemented
+                            dual-factor authentication by combining PIN entry with tongue biometrics.
                         </li>
                     </ul>
+                    <!-- Replace with real repo URL if public -->
                     <a href="https://github.com/your-github/bio-tongue" target="_blank" class="link-inline">View on GitHub</a>
                 </div>
 
                 <div class="card">
                     <h3>QR-Based Plant Information & Monitoring System</h3>
-                    <p class="meta">WordPress, ESP8266, ThingSpeak, Blynk, IoT Sensors</p>
+                    <p class="meta">WordPress, ThingSpeak, Blynk, ESP8266, Soil Moisture Sensor, DHT11</p>
                     <ul>
                         <li>
-                            Designed a smart plant monitoring system where users scan QR codes to access plant details
-                            and real-time environmental data.
+                            Designed a smart plant monitoring system where users scan QR codes placed near plants to
+                            access detailed information and real-time environmental data.
                         </li>
                         <li>
                             Integrated ESP8266 with soil moisture and temperature–humidity sensors to stream live data
-                            to ThingSpeak and Blynk dashboards.
+                            to ThingSpeak and Blynk dashboards for remote monitoring.
                         </li>
                     </ul>
                 </div>
 
                 <div class="card">
-                    <h3>Expense Tracker Web App</h3>
+                    <h3>Expense Tracker</h3>
                     <p class="meta">JavaScript, Node.js, Express, MongoDB</p>
                     <ul>
                         <li>
-                            Built a full-stack expense management system with CRUD operations, filters, charts and CSV
-                            export for financial tracking.
+                            Built a full-stack expense management system with a JavaScript frontend and Node.js/Express
+                            backend integrated with MongoDB for data persistence.
                         </li>
                         <li>
-                            Designed REST APIs and implemented a responsive UI for a better user experience.
+                            Implemented CRUD operations, filters, charts and CSV export with a clean API design and
+                            responsive UI.
                         </li>
                     </ul>
+                    <!-- Replace with real repo URL if public -->
                     <a href="https://github.com/your-github/expense-tracker" target="_blank" class="link-inline">View on GitHub</a>
                 </div>
             </div>
@@ -140,21 +154,35 @@
                         <h3>Education</h3>
                         <ul>
                             <li>
-                                B.E. Electronics & Communication Engineering – Sandip Institute of Technology & Research Centre, Nashik
-                                (CGPA: 8.0)
+                                <strong>B.E. Electronics & Communication (ECE)</strong><br>
+                                Sandip Institute of Technology & Research Centre, Nashik<br>
+                                CGPA: 8.0 · Dec 2021 – June 2025
                             </li>
                             <li>
-                                HSC – Laxminarayan International Junior College, Khamgaon (95.15%)
+                                <strong>Higher Secondary Certificate (HSC)</strong><br>
+                                Laxminarayan International Junior College, Khamgaon<br>
+                                Percentage: 95.15% · Apr 2019 – June 2021
                             </li>
                         </ul>
                     </div>
                     <div class="card">
-                        <h3>Highlights</h3>
+                        <h3>Achievements & Leadership</h3>
                         <ul>
-                            <li>Published research paper “BioTongue: A Tongue-Based Biometric Authentication System”.</li>
-                            <li>Cultural Secretary (2023–24) – led events and technical fests.</li>
-                            <li>Conducted IoT seminars/workshops and mentored juniors.</li>
-                            <li>Built Maker Space component inventory management web app for the department.</li>
+                            <li>
+                                Published research paper “BioTongue: A Tongue-Based Biometric Authentication System”
+                                with CRC Press.
+                            </li>
+                            <li>
+                                Elected Cultural Secretary (2023–24) for Techxcellence; organized departmental events
+                                and technical fests.
+                            </li>
+                            <li>
+                                Conducted IoT seminars and workshops with Flylabs, mentoring juniors in hands-on IoT learning.
+                            </li>
+                            <li>
+                                Managed the “Maker Space” project – built a component inventory management web
+                                application for the EnTC department.
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -170,7 +198,7 @@
                     Feel free to reach out for opportunities, collaborations or tech discussions.
                 </p>
                 <div class="contact-links">
-                    <a href="mailto:your.email@example.com" class="btn-primary">Email Me</a>
+                    <a href="mailto:Sarafsarv6699@gmail.com" class="btn-primary">Email Me</a>
                     <a href="contact.html" class="btn-secondary">View Contact Details</a>
                 </div>
             </div>
@@ -186,4 +214,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
